Fixed alignments in VC tab

--- a/frontend/src/styles/utilities.scss
+++ b/frontend/src/styles/utilities.scss
@@ -2,6 +2,10 @@
   @apply bg-gradient-to-b from-[rgba(249,249,249,1)] from-[0.53%] to-white to-[83.28%] dark:from-darkmode-theme-light dark:to-darkmode-body;
 }
 
+.bg-gradient-r {
+  @apply bg-gradient-to-r from-[rgba(249,249,249,1)] from-[0.53%] to-white to-[83.28%] dark:from-darkmode-theme-light dark:to-darkmode-body;
+}
+
 .rounded-sm {
   @apply rounded-[4px];
 }
